@@ -18,7 +18,7 @@
  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */
 
-/*	$Id: misc.c 2065 2006-04-10 20:38:36Z paul $
+/*	$Id: misc.c 2080 2006-04-24 09:40:11Z aaron $
  *
  *	Miscelaneous functions */
 
@@ -919,140 +919,6 @@ int dm_valid_format(const char *str)
         return DM_SUCCESS;
 }
 
-/* Finds the folder if included in an address between a '+' and '@'.
- * Does not allocate memory since that should already be done prior to
- * calling this function.  The string must be shorter if anything.
- * retchar will have the new string or the original value if there is
- * no folder to remove.
- *
- * Return values are:
- *   0 on success (found)
- *   -1 on failure (not found)
- *
- * */
-int dm_strip_folder(char **retchar, size_t * retsize)
-{
-	char *value;
-	char *tmpleft;
-	char *tmpright;
-	size_t tmplen;
-
-	char left = '+';
-	char right = '@';
-
-	value = *retchar;
-	tmpleft = value;
-	tmpright = value + strlen(value);
-
-	while (tmpleft[0] != left && tmpleft < tmpright)
-		tmpleft++;
-	while (tmpright[0] != right && tmpright > tmpleft)
-		tmpright--;
-
-	if (tmpleft[0] != left || tmpright[0] != right) {
-		trace(TRACE_INFO,
-		      "%s, %s: No folder found.",
-		      __FILE__, __func__);
-		*retsize = strlen(*retchar);
-		return -1;
-	} else {
-		tmplen = strlen(value) - (strlen(tmpleft) - strlen(tmpright));
-		strncpy(*retchar, value, (strlen(value) - strlen(tmpleft)));
-		(*retchar)[(strlen(value) - strlen(tmpleft))] = '\0';
-		strncat(*retchar, tmpright, strlen(tmpright));
-		(*retchar)[tmplen] = '\0';
-		*retsize = tmplen;
-		trace(TRACE_INFO,
-		      "%s, %s: Found [%s] of length [%zd] around '%c' and '%c'.",
-		      __FILE__, __func__, *retchar, *retsize, left,
-		      right);
-		return 0;
-	}
-}
-
-/* Function to determine if the requested mailbox exists or is valid to
- * be created for the specified userid
- *
- * Return values are:
- *   1 on success (existing or allowed to be created)
- *   0 on failure (does not exist not allowed to be created)
- *
- * */
-
-int dm_valid_folder(const char *userid, char *folder)
-{
-	field_t val;
-	char tmp[IMAP_MAX_MAILBOX_NAMELEN+2] = "";
-	u64_t useridnr;
-	u64_t mailboxidnr;
-	u64_t *children = NULL;
-	unsigned nchildren;
-	int result;
-
-	/* We need to get the user_idnr first */
-	if (auth_user_exists(userid, &useridnr)) {
-		/* Create the pattern to search on the folder list. */
-		tmp[0] = '^';
-		strncat(&tmp[1], folder, 78);
-		
-		/* Only search subscribed folders for delivery. */
-		result = db_findmailbox_by_regex(useridnr, tmp, &children, &nchildren, 1);
-
-		/* Invalid response, deal with it. */
-		if (result != 0) {
-			trace(TRACE_INFO, "%s, %s: Folder [%s] regex failure for [%s].",
-					   __FILE__, __func__, folder, userid);
-			return 0;
-		}
-
-		/* If we got some children back we are home free. */
-		if (nchildren > 0) {
-
-			mailboxidnr = children[0];	/* Save the mailboxid for later. */
-			dm_free(children);		/* Done with the children. */
-
-			/* Set the folder name to what is in the database, this is */
-			/* to avoid mixed case differences.  See README.folders. */
-			result = db_getmailboxname(mailboxidnr, useridnr, folder);
-
-			/* No success, then bail out and assume INBOX */
-			if (result == -1) {
-				trace(TRACE_INFO, "%s, %s: Folder [%s] lookup failure for [%s].",
-						   __FILE__, __func__, folder, userid);
-				return 0;
-			}
-
-			/* Otherwise we now have the foldername as appears in the DB. */
-			trace(TRACE_INFO, "%s, %s: mailbox [%s] exists for [%s].",
-					   __FILE__, __func__, folder, userid);
-			return 1;
-		}
-
-		/* No existing folder, are we allowed to create it? */
-		config_get_value("CREATE_FOLDERS", "DBMAIL", val);
-
-		/* Reset the tmp string and get our search item. */
-		/* we can cheat and just modify our initial search string some */
-		tmp[0] = ':';
-		strcat(tmp, ":");
-
-		if (strcasestr(val, tmp) != NULL) {
-			trace(TRACE_INFO, "%s,%s: folder [%s] is in create list [%s]",
-					   __FILE__, __func__, tmp, val);
-			return 1;
-		} else {
-			trace(TRACE_INFO, "%s,%s: folder [%s] not in create list [%s]",
-					   __FILE__, __func__, tmp, val);
-
-		}
-	}
-
-	trace(TRACE_INFO, "%s,%s: failed to find or create folder [%s] for [%s], using INBOX",
-			   __FILE__, __func__, folder, userid);
-
-	/* Either user doesn't exist, or not allowed to create. */
-	return 0;
-}
 
 
 /*
