@@ -1,3 +1,13 @@
+2006-04-24  Aaron Stone  <aaron@serendipity.cx>
+
+	* configure.in, acinclude.m4:
+	Added latest getopt.m4 from Gnulib that will activate USE_DM_GETOPT
+	on systems with an unfriendly getopt (closes half of bug #331).
+	* misc.h, misc.c:
+	Zapped two unused functions dm_valid_folder, dm_strip_folder.
+	* pipe.c:
+	valid_sender avoids strcasestr (closes the other half of bug #331).
+
 2006-04-21  Paul J Stevens <paul@nfg.nl>
 
 	* config.c, dbmail.h.in, imapd.c, lmtpd.c, modules/authldap.c, pop3d.c, 
